// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match the snapshot when the loading is false 1`] = `
<DocumentFragment>
  .emotion-0 {
  min-height: 100vh;
  line-height: 1.25em;
  background-color: #f5f5f5;
}

.emotion-1>button {
  padding: 0;
}

.emotion-2 {
  margin: 0;
}

.emotion-3 {
  display: grid;
  grid-template-columns: auto auto;
  gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  padding: 0.5rem;
}

.emotion-3:hover {
  background-color: #f5f5f5;
}

<div
    class="fui-FluentProvider fui-FluentProvider_r_2_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      class="emotion-0"
    >
      <div
        class="fui-Accordion"
      >
        <div
          class="fui-AccordionItem"
        >
          <div
            class="fui-AccordionHeader emotion-1 ___kex8dp0_1udlp87 f19n0e5 f1c21dwh f1s184ao ft85np5"
          >
            <button
              aria-disabled="true"
              aria-expanded="true"
              class="fui-AccordionHeader__button ___290x180_14bx2gs f1ewtqcl f1u2r49w f1ym3bx4 fk6fouc fkhj508 f1i3iumi f1gl81tg f1rmphuq f37px4s fgusgyc f10pi13n fly5x3f fre7gi1 f1358rze fqdk4by f1rvrf73 f5pgtk9 f22iagw f122n59 f1k6fduh figsok6 ftqa4ok f2hkw1w f8hki3x f1d2448m f1bjia2o ffh67wi f1j6vpng f1pniga2 f987i1v f1ffjurs f15bsgw9 f14e48fq f18yb2kv fd6o370 ffwy5si f3znvyf f57olzd f4stah7 f480a47 fs1por5"
              type="button"
            >
              <span
                aria-hidden="true"
                class="fui-AccordionHeader__expandIcon ___7oynyr0_1pz5o7c f1l02sjl f22iagw f122n59 f106mvju f1pp30po f1vdfbxk"
              >
                <svg
                  aria-hidden="true"
                  class="___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                  fill="currentColor"
                  height="1em"
                  style="transform: rotate(90deg); transition: transform 200ms ease-out;"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Finance
            </button>
          </div>
          <div
            class="fui-AccordionPanel emotion-2 ___1rufncu_1hx1scr f1axvtxu"
          >
            <span
              class="fui-Text emotion-3 ___c56hd20_1xy0w11 fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f2jf649"
            >
              <span
                aria-label="Adele Vance"
                class="fui-Avatar r81b29z ___3oygws0_1lfz49j fq4mcun frvgh55 f13mqy1h"
                id="avatar-_r_3_"
                role="img"
              >
                <span
                  class="fui-Avatar__initials rip04v ___105uvta_5ja1qh0 f1f3ti53 fu4yj0j"
                  id="avatar-_r_3___initials"
                >
                  AV
                </span>
              </span>
              <span
                class="fui-Text ___gbswv60_1h9bfvt fk6fouc fkhj508 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1gl81tg f1cmbuwj"
              >
                Adele Vance
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the loading is true 1`] = `
<DocumentFragment>
  .emotion-0 {
  min-height: 100vh;
  line-height: 1.25em;
  background-color: #f5f5f5;
}

.emotion-1>button {
  padding: 0;
}

.emotion-2 {
  margin: 0;
}

<div
    class="fui-FluentProvider fui-FluentProvider_r_0_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      class="emotion-0"
    >
      <div
        class="fui-Accordion"
      >
        <div
          class="fui-AccordionItem"
        >
          <div
            class="fui-AccordionHeader emotion-1 ___kex8dp0_1udlp87 f19n0e5 f1c21dwh f1s184ao ft85np5"
          >
            <button
              aria-disabled="true"
              aria-expanded="true"
              class="fui-AccordionHeader__button ___290x180_14bx2gs f1ewtqcl f1u2r49w f1ym3bx4 fk6fouc fkhj508 f1i3iumi f1gl81tg f1rmphuq f37px4s fgusgyc f10pi13n fly5x3f fre7gi1 f1358rze fqdk4by f1rvrf73 f5pgtk9 f22iagw f122n59 f1k6fduh figsok6 ftqa4ok f2hkw1w f8hki3x f1d2448m f1bjia2o ffh67wi f1j6vpng f1pniga2 f987i1v f1ffjurs f15bsgw9 f14e48fq f18yb2kv fd6o370 ffwy5si f3znvyf f57olzd f4stah7 f480a47 fs1por5"
              type="button"
            >
              <span
                aria-hidden="true"
                class="fui-AccordionHeader__expandIcon ___7oynyr0_1pz5o7c f1l02sjl f22iagw f122n59 f106mvju f1pp30po f1vdfbxk"
              >
                <svg
                  aria-hidden="true"
                  class="___9ctc0p0_1xvj9ao f1w7gpdv fez10in f1dd5bof"
                  fill="currentColor"
                  height="1em"
                  style="transform: rotate(90deg); transition: transform 200ms ease-out;"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
              Finance
            </button>
          </div>
          <div
            class="fui-AccordionPanel emotion-2 ___1rufncu_1hx1scr f1axvtxu"
          >
            <div
              class="fui-Spinner rpp59a7"
              role="progressbar"
            >
              <span
                class="fui-Spinner__spinner rvgcg50 ___1xxu43e_eahmz60 f1d2rq10 f1szoe96 fb52u90"
              >
                <span
                  class="fui-Spinner__spinnerTail rxov3xa"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
